--- a/public/client.html
+++ b/public/client.html
@@ -6,14 +6,15 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0"
         />
-        <link rel="stylesheet" href="style.css">
+        <link
+            rel="stylesheet"
+            href="style.css"
+        />
         <title>Document</title>
         <script src="/socket.io/socket.io.js"></script>
     </head>
     <body>
-        <canvas
-        id="canvas"
-        ></canvas>
+        <canvas id="canvas"></canvas>
         <div id="menu">
             <div class="background"></div>
             <div class="content">
@@ -23,14 +24,6 @@
         </div>
         <script
             src="client.js"
-            type="module"
-        ></script>
-        <script
-            src="classes/Player.js"
-            type="module"
-        ></script>
-        <script
-            src="classes/Game.js"
             type="module"
         ></script>
     </body>
