--- a/public/client.html
+++ b/public/client.html
@@ -19,7 +19,9 @@
         <div id="menu">
             <div class="background"></div>
             <div class="content">
-                <h1>Hello</h1>
+                <h1 id="title">WELCOME</h1>
+                <input type="text" placeholder="name" id="nameInput">
+                <h6 id="errorText"></h6>
                 <button id="joinBtn">join</button>
             </div>
         </div>
