delay shoot, bullet range limit, fix background bug, add plan text file

--- a/public/client.html
+++ b/public/client.html
@@ -16,12 +16,13 @@
     </head>
     <body>
         <canvas id="canvas"></canvas>
+        <canvas id="map"></canvas>
         <div id="menu">
             <div class="background"></div>
             <div class="content">
                 <h1 id="title">WELCOME</h1>
                 <input type="text" placeholder="name" id="nameInput">
-                <h6 id="errorText"></h6>
+                <h5 id="errorText"></h5>
                 <button id="joinBtn">join</button>
             </div>
         </div>
