mini map, kill announce,

--- a/public/client.html
+++ b/public/client.html
@@ -15,8 +15,8 @@
         <script src="/socket.io/socket.io.js"></script>
     </head>
     <body>
+        <div class="announceContainer"></div>
         <canvas id="canvas"></canvas>
-        <canvas id="map"></canvas>
         <div id="menu">
             <div class="background"></div>
             <div class="content">
