--- a/public/client.html
+++ b/public/client.html
@@ -15,6 +15,27 @@
         <script src="/socket.io/socket.io.js"></script>
     </head>
     <body>
+        <div class="leaderBoard">
+            <div class="main">
+                <div class="player">
+                    <span class="rank">3. Long</span><span class="kill">4</span>
+                </div>
+                <div class="player">
+                    <span class="rank">3. Long</span><span class="kill">4</span>
+                </div>
+                <div class="player">
+                    <span class="rank">3. Long</span><span class="kill">4</span>
+                </div>
+                <div class="player">
+                    <span class="rank">3. Long</span><span class="kill">4</span>
+                </div>
+            </div>
+            <div class="currentPlayer">
+                <div class="player">
+                    <span class="rank">3. Long</span><span class="kill">4</span>
+                </div>
+            </div>
+        </div>
         <div class="announceContainer"></div>
         <canvas id="canvas"></canvas>
         <div id="menu">
