hp, heal, leader board

--- a/public/client.html
+++ b/public/client.html
@@ -16,25 +16,7 @@
     </head>
     <body>
         <div class="leaderBoard">
-            <div class="main">
-                <div class="player">
-                    <span class="rank">3. Long</span><span class="kill">4</span>
-                </div>
-                <div class="player">
-                    <span class="rank">3. Long</span><span class="kill">4</span>
-                </div>
-                <div class="player">
-                    <span class="rank">3. Long</span><span class="kill">4</span>
-                </div>
-                <div class="player">
-                    <span class="rank">3. Long</span><span class="kill">4</span>
-                </div>
-            </div>
-            <div class="currentPlayer">
-                <div class="player">
-                    <span class="rank">3. Long</span><span class="kill">4</span>
-                </div>
-            </div>
+            <div class="main"></div>
         </div>
         <div class="announceContainer"></div>
         <canvas id="canvas"></canvas>
